--- a/Semester 1/COMP7308   - Introduction to unmanned systems/notes/main.tex
+++ b/Semester 1/COMP7308   - Introduction to unmanned systems/notes/main.tex
@@ -43,7 +43,7 @@
     \vspace{6cm}  % Add some vertical space before the title
     \includegraphics[width=0.5\textwidth]{./img/HKU.png} \\ % Insert logo at the top of title page
     \vspace{1cm}  % Add some vertical space between logo and title
-    COMP 7802A - Introduction to financial computing \\ % Title text
+    COMP 7308 - Introduction to unmanned systems \\  % Main title text
     \vspace{1cm}
     \textit{Course Notes}  % Subtitle text
 }
@@ -75,7 +75,7 @@
 \pagestyle{fancy}
 
 % Include the content from the file
-\input{01-BasicFinancialArithmetic}
-\input{02-MoneyMarket.tex}
+\input{01-Introduction}
+\input{02-Motion}
 
 \end{document}
