Fix all quotation marks

--- a/Semester 1/COMP7503B - Multimedia technologies/Assignment/Assignment-1B/Question1.tex
+++ b/Semester 1/COMP7503B - Multimedia technologies/Assignment/Assignment-1B/Question1.tex
@@ -6,7 +6,7 @@
 \section{Peter buttered the burnt toast}
 
 \subsection{Question}
-Launch the app on your mobile device in a quiet environment, speak the sentence “Peter buttered the burnt toast”. Take the screenshot of the spectrogram, and indicate the presence of the stop consonants and voiced phonemes in the spectrogram.
+Launch the app on your mobile device in a quiet environment, speak the sentence ``Peter buttered the burnt toast''. Take the screenshot of the spectrogram, and indicate the presence of the stop consonants and voiced phonemes in the spectrogram.
 
 \subsection{Answer}
 First we need to record this in a quiet environment. 
@@ -33,7 +33,7 @@ The library used in this experiment is \texttt{librosa}. The code is shown in th
 
 From the figure \ref{fig:Question1-2}, the \textbf{green dots} and \textbf{blue line} indicate the sections corresponding to vowels (voiced phonemes). Additionally, there are several points where the frequency sharply rises; these points represent plosives, which are also known as stop consonants.
 
-"Peter buttered the burnt toast" contains the following phonemes:
+``Peter buttered the burnt toast'' contains the following phonemes:
 
 \begin{table}[H]
     \centering
@@ -47,7 +47,7 @@ From the figure \ref{fig:Question1-2}, the \textbf{green dots} and \textbf{blue 
         toast & oa & /əʊ/ (1) \\ \hline
         \textcolor{red}{\textbf{Total}} & & \textcolor{red}{7} \\ \hline
     \end{tabular}
-    \caption{Phonemes in "Peter buttered the burnt toast"}
+    \caption{Phonemes in ``Peter buttered the burnt toast''}
 \end{table}
 
 \vspace{1em} % Add some space between the tables
@@ -62,18 +62,18 @@ From the figure \ref{fig:Question1-2}, the \textbf{green dots} and \textbf{blue 
         toast & t, t & /t/, /t/ (2) \\ \hline
         \textcolor{red}{\textbf{Total}} & & \textcolor{red}{9} \\ \hline
     \end{tabular}
-    \caption{Stop Consonants in "Peter buttered the burnt toast"}
+    \caption{Stop Consonants in ``Peter buttered the burnt toast''}
 \end{table}
 
 
-/ð/ is a voiced dental fricative, representing the /th/ sound, as seen in the word "the." It does not belong to the categories of vowels or stop consonants; instead, it is classified as a fricative because the airflow creates friction between the tongue and the teeth during its production. In the spectrogram, there is a noticeable gap in the frequency domain.
+/ð/ is a voiced dental fricative, representing the /th/ sound, as seen in the word ``the.'' It does not belong to the categories of vowels or stop consonants; instead, it is classified as a fricative because the airflow creates friction between the tongue and the teeth during its production. In the spectrogram, there is a noticeable gap in the frequency domain.
 
 Lastly, we can mark the voiced phonemes and stop consonants in the spectrogram. The updated spectrogram is shown in Figure \ref{fig:Question1-3}.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{./img/Q1-2.png}
-    \caption{Marked Spectrogram of the sentence “Peter buttered the burnt toast”}
+    \caption{Marked Spectrogram of the sentence ``Peter buttered the burnt toast''}
     \label{fig:Question1-3}
 \end{figure}
 
