--- a/Semester 1/COMP7503B - Multimedia technologies/Assignment/Assignment-1B/Question3.tex
+++ b/Semester 1/COMP7503B - Multimedia technologies/Assignment/Assignment-1B/Question3.tex
@@ -13,9 +13,9 @@ To implement speech to text algorithm, it is important to do word segmentation d
 
 To implement a speech-to-text algorithm, word segmentation is a crucial step in the process of converting spoken language into written text. However, relying solely on silence detection to segment words, as observed from the spectrograms in Questions 1 and 2, presents several challenges.
 
-Firstly, many sounds, particularly vowels, are continuous and lack clear pauses between them, even when moving from one word to another. For instance, in the sentence "I owe you a Yo-Yo," the vowel sounds between words such as "I" and "owe," or "you" and "a," are continuous. In the spectrogram, these sounds often appear as uninterrupted bands, making it difficult to identify where one word ends and the next begins. This continuity of sound means that silence or significant pauses are not present between words, especially when the speech is fluid and natural, rather than deliberate.
+Firstly, many sounds, particularly vowels, are continuous and lack clear pauses between them, even when moving from one word to another. For instance, in the sentence ``I owe you a Yo-Yo,'' the vowel sounds between words such as ``I'' and ``owe,'' or ``you'' and ``a,'' are continuous. In the spectrogram, these sounds often appear as uninterrupted bands, making it difficult to identify where one word ends and the next begins. This continuity of sound means that silence or significant pauses are not present between words, especially when the speech is fluid and natural, rather than deliberate.
 
-Secondly, voiced phonemes (like vowels) often have higher energy levels and dominate the spectrogram, while unvoiced consonants or stop consonants (like "p," "t," "b") are brief and may not always be followed by noticeable silence. For example, in the phrase "Peter buttered the burnt toast" from Question 1, the stop consonants such as "p" and "b" are marked by short, sharp bursts of energy, but they are followed almost immediately by the vowels, leaving little to no silence for easy segmentation.
+Secondly, voiced phonemes (like vowels) often have higher energy levels and dominate the spectrogram, while unvoiced consonants or stop consonants (like ``p,'' ``t,'' ``b'') are brief and may not always be followed by noticeable silence. For example, in the phrase ``Peter buttered the burnt toast'' from Question 1, the stop consonants such as ``p'' and ``b'' are marked by short, sharp bursts of energy, but they are followed almost immediately by the vowels, leaving little to no silence for easy segmentation.
 
 In natural speech, silence typically only occurs at the end of sentences or during intentional pauses, rather than between every word. This makes it unreliable to use silence as the primary method for word segmentation. Instead, more sophisticated techniques, such as detecting phoneme boundaries, stress patterns, or changes in frequency, are necessary for accurate segmentation in speech-to-text systems.
 
