--- a/Semester 1/COMP7802A - Introduction to financial computing/notes/main.tex
+++ b/Semester 1/COMP7802A - Introduction to financial computing/notes/main.tex
@@ -77,5 +77,6 @@
 % Include the content from the file
 \input{01-BasicFinancialArithmetic}
 \input{02-MoneyMarket.tex}
+\input{Homework1.tex}
 
 \end{document}
