add another 2 models

--- a/Semester 1/COMP7409A - Machine learning in trading and finance/A2-1.ipynb
+++ b/Semester 1/COMP7409A - Machine learning in trading and finance/A2-1.ipynb
@@ -62,6 +62,10 @@
    "outputs": [],
    "source": [
     "# get stock data\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "\n",
     "symbol = \"00066\"\n",
     "start = \"2010-01-01\"\n",
     "end = \"2020-06-30\"\n",
@@ -96,49 +100,127 @@
     "X_train = X_train.select_dtypes(include=[np.number])\n",
     "X_test = X_test.select_dtypes(include=[np.number])\n",
     "\n",
-    "# define pipeline\n",
-    "pipeline = Pipeline([\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('model', GradientBoostingRegressor())\n",
-    "])\n",
-    "\n",
-    "# define hyperparameters grid\n",
-    "param_grid = {\n",
-    "    'model__n_estimators': [100, 200],\n",
-    "    'model__learning_rate': [0.01, 0.05, 0.1],\n",
-    "    'model__max_depth': [3, 5, 7]\n",
+    "# 定义要比较的模型\n",
+    "models = {\n",
+    "    'GradientBoosting': GradientBoostingRegressor(),\n",
+    "    'RandomForest': RandomForestRegressor(),\n",
+    "    'SVR': SVR()\n",
     "}\n",
     "\n",
-    "# use TimeSeriesSplit for cross-validation to avoid data leakage\n",
+    "# 定义超参数网格\n",
+    "param_grids = {\n",
+    "    'GradientBoosting': {\n",
+    "        'model__n_estimators': [100, 200],\n",
+    "        'model__learning_rate': [0.01, 0.05, 0.1],\n",
+    "        'model__max_depth': [3, 5, 7]\n",
+    "    },\n",
+    "    'RandomForest': {\n",
+    "        'model__n_estimators': [100, 200],\n",
+    "        'model__max_depth': [5, 10, None],\n",
+    "        'model__min_samples_split': [2, 5, 10]\n",
+    "    },\n",
+    "    'SVR': {\n",
+    "        'model__C': [0.1, 1, 10],\n",
+    "        'model__gamma': ['scale', 'auto'],\n",
+    "        'model__kernel': ['rbf', 'linear']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# 使用 TimeSeriesSplit 进行交叉验证\n",
     "tscv = TimeSeriesSplit(n_splits=5)\n",
-    "grid_search = GridSearchCV(pipeline, param_grid, cv=tscv, scoring='neg_mean_squared_error', n_jobs=-1)\n",
     "\n",
-    "# fit the model and find the best parameters\n",
-    "grid_search.fit(X_train, y_train)\n",
-    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "# 存储结果\n",
+    "best_models = {}\n",
+    "results = {}\n",
     "\n",
-    "# predict using the best model\n",
-    "best_model = grid_search.best_estimator_\n",
-    "y_pred = best_model.predict(X_test)\n",
+    "for model_name, model in models.items():\n",
+    "    print(f\"Training {model_name}...\")\n",
+    "    # 定义管道\n",
+    "    pipeline = Pipeline([\n",
+    "        ('scaler', StandardScaler()),\n",
+    "        ('model', model)\n",
+    "    ])\n",
     "\n",
-    "# evaluation\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
+    "    # 定义 GridSearchCV\n",
+    "    grid_search = GridSearchCV(\n",
+    "        pipeline,\n",
+    "        param_grid=param_grids[model_name],\n",
+    "        cv=tscv,\n",
+    "        scoring='neg_mean_squared_error',\n",
+    "        n_jobs=-1\n",
+    "    )\n",
     "\n",
-    "print(f\"Optimized MAE: {mae}\")\n",
-    "print(f\"Optimized MSE: {mse}\")\n",
-    "print(f\"Optimized RMSE: {rmse}\")\n",
+    "    # 训练模型\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    best_models[model_name] = grid_search.best_estimator_\n",
     "\n",
-    "# plot the predicted vs actual price\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "plt.plot(y_test.index, y_test, label=\"Actual Price\", color=\"blue\")\n",
-    "plt.plot(y_test.index, y_pred, label=\"Predicted Price\", color=\"red\")\n",
-    "plt.xlabel(\"Date\")\n",
-    "plt.ylabel(\"Price\")\n",
-    "plt.title(\"Optimized Gradient Boosting Regressor - Predicted vs Actual Price\")\n",
+    "    # 预测并评估模型\n",
+    "    y_pred = best_models[model_name].predict(X_test)\n",
+    "    mae = mean_absolute_error(y_test, y_pred)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "\n",
+    "    # 存储结果\n",
+    "    results[model_name] = {\n",
+    "        'MAE': mae,\n",
+    "        'MSE': mse,\n",
+    "        'RMSE': rmse,\n",
+    "        'Best Params': grid_search.best_params_\n",
+    "    }\n",
+    "\n",
+    "    # 打印每个模型的最优参数及评估结果\n",
+    "    print(f\"{model_name} - Best Params: {grid_search.best_params_}\")\n",
+    "    print(f\"{model_name} - Optimized MAE: {mae}\")\n",
+    "    print(f\"{model_name} - Optimized MSE: {mse}\")\n",
+    "    print(f\"{model_name} - Optimized RMSE: {rmse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 可视化预测效果 分为3个子图\n",
+    "plt.figure(figsize=(18, 6))\n",
+    "plt.suptitle(f\"Stock Price Prediction for {symbol}.HK\")\n",
+    "\n",
+    "# 子图1\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
+    "plt.plot(y_test.index, best_models['GradientBoosting'].predict(X_test), label='Predicted', color='red')\n",
+    "plt.title(\"GradientBoosting\")\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "\n",
+    "# 子图2\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
+    "plt.plot(y_test.index, best_models['RandomForest'].predict(X_test), label='Predicted', color='yellow')\n",
+    "plt.title(\"RandomForest\")\n",
+    "plt.legend()\n",
+    "\n",
+    "# 子图3\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
+    "plt.plot(y_test.index, best_models['SVR'].predict(X_test), label='Predicted', color='green')\n",
+    "plt.title(\"SVR\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 画出每个模型的MAE, MSE, RMSE\n",
+    "metrics_df = pd.DataFrame(results).T\n",
+    "metrics_df.plot(kind='bar', figsize=(12, 6))\n",
+    "plt.ylabel(\"Error\")\n",
+    "plt.title(\"Model Comparison - Error Metrics\")\n",
+    "plt.show()"
    ]
   }
  ],
