add LSTM to assignment 2

--- a/Semester 1/COMP7409A - Machine learning in trading and finance/A2-1.ipynb
+++ b/Semester 1/COMP7409A - Machine learning in trading and finance/A2-1.ipynb
@@ -181,29 +181,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 可视化预测效果 分为3个子图\n",
-    "plt.figure(figsize=(18, 6))\n",
+    "# LSTM\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(units=50, return_sequences=True, input_shape=(X_train.shape[1], 1)))\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(LSTM(units=50, return_sequences=True))\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(LSTM(units=50))\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(Dense(units=1))\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "model.fit(X_train, y_train, epochs=100, batch_size=32)\n",
+    "\n",
+    "# 预测并评估模型\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred = y_pred.reshape(-1)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "# 存储结果\n",
+    "results['LSTM'] = {\n",
+    "    'MAE': mae,\n",
+    "    'MSE': mse,\n",
+    "    'RMSE': rmse\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 可视化预测效果 分为2x2分布 4个子图\n",
+    "plt.figure(figsize=(18, 12))\n",
     "plt.suptitle(f\"Stock Price Prediction for {symbol}.HK\")\n",
     "\n",
-    "# 子图1\n",
-    "plt.subplot(1, 3, 1)\n",
+    "# 子图1 - GradientBoosting\n",
+    "plt.subplot(2, 2, 1)\n",
     "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
     "plt.plot(y_test.index, best_models['GradientBoosting'].predict(X_test), label='Predicted', color='red')\n",
     "plt.title(\"GradientBoosting\")\n",
     "plt.legend()\n",
     "\n",
-    "# 子图2\n",
-    "plt.subplot(1, 3, 2)\n",
+    "# 子图2 - RandomForest\n",
+    "plt.subplot(2, 2, 2)\n",
     "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
     "plt.plot(y_test.index, best_models['RandomForest'].predict(X_test), label='Predicted', color='yellow')\n",
     "plt.title(\"RandomForest\")\n",
     "plt.legend()\n",
     "\n",
-    "# 子图3\n",
-    "plt.subplot(1, 3, 3)\n",
+    "# 子图3 - SVR\n",
+    "plt.subplot(2, 2, 3)\n",
     "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
     "plt.plot(y_test.index, best_models['SVR'].predict(X_test), label='Predicted', color='green')\n",
     "plt.title(\"SVR\")\n",
+    "plt.legend()\n",
+    "\n",
+    "# 子图4 - LSTM\n",
+    "plt.subplot(2, 2, 4)\n",
+    "plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
+    "plt.plot(y_test.index, y_pred, label='Predicted', color='purple')\n",
+    "plt.title(\"LSTM\")\n",
     "plt.legend()\n",
     "\n",
     "plt.show()"
