--- a/Semester 1/COMP7503B - Multimedia technologies/Assignment/Programming/demo.ipynb
+++ b/Semester 1/COMP7503B - Multimedia technologies/Assignment/Programming/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,35 @@
     "# 显示图表\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "香港居民高峰日期: 2024-03-29 00:00:00, 人数: 969974\n",
+      "内地访客高峰日期: 2024-02-14 00:00:00, 人数: 361896\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 计算各访客类型的每日客流量\n",
+    "daily_visitor_totals = df.groupby(['日期'])[['香港居民', '内地访客', '其他访客']].sum()\n",
+    "\n",
+    "# 找到某个访客类型的高峰期\n",
+    "max_hk_resident_date = daily_visitor_totals['香港居民'].idxmax()\n",
+    "max_hk_resident_value = daily_visitor_totals['香港居民'].max()\n",
+    "\n",
+    "max_mainland_visitor_date = daily_visitor_totals['内地访客'].idxmax()\n",
+    "max_mainland_visitor_value = daily_visitor_totals['内地访客'].max()\n",
+    "\n",
+    "print(f\"香港居民高峰日期: {max_hk_resident_date}, 人数: {max_hk_resident_value}\")\n",
+    "print(f\"内地访客高峰日期: {max_mainland_visitor_date}, 人数: {max_mainland_visitor_value}\")\n"
    ]
   },
   {
