Update demo.ipynb to improve classification accuracy

--- a/Semester 1/COMP7103C - Data mining/Classification/src/demo.ipynb
+++ b/Semester 1/COMP7103C - Data mining/Classification/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +122,7 @@
     "\n",
     "# Preprocess data\n",
     "def preprocess_data(data):\n",
+    "    data = data.copy()\n",
     "    # Fill missing values for string columns with the mode (most frequent value)\n",
     "    data['Married'] = data['Married'].fillna(data['Married'].mode()[0])  # Most frequent value\n",
     "    data['Gender'] = data['Gender'].fillna(data['Gender'].mode()[0])  # Most frequent value\n",
@@ -151,15 +152,15 @@
     "\n",
     "train_data = preprocess_data(train_data)\n",
     "val_data = preprocess_data(val_data)\n",
-    "test_data = preprocess_data(test_data)\n",
+    "processed_test_data = preprocess_data(test_data)\n",
     "\n",
     "# Split data\n",
     "X_train = train_data.drop(['ID','Class(Target)'],axis=1)\n",
     "y_train = train_data['Class(Target)']\n",
     "X_val = val_data.drop(['ID','Class(Target)'],axis=1)\n",
     "y_val = val_data['Class(Target)']\n",
-    "X_test = test_data.drop(['ID','Class(Target)'],axis=1)\n",
-    "y_test = test_data['Class(Target)']\n",
+    "X_test = processed_test_data.drop(['ID','Class(Target)'],axis=1)\n",
+    "y_test = processed_test_data['Class(Target)']\n",
     "\n",
     "# Standardize data\n",
     "scaler = StandardScaler()\n",
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,9 @@
       "Logistic Regression Accuracy: 0.4462114125350795\n",
       "Support Vector Classifier Accuracy: 0.47988774555659497\n",
       "Random Forest Accuracy: 0.41253507951356405\n",
-      "Gradient Boosting Accuracy: 0.4761459307764266\n"
+      "Gradient Boosting Accuracy: 0.4761459307764266\n",
+      "Best model: Support Vector Classifier with accuracy: 0.47988774555659497\n",
+      "Updated test data saved as 'Updated_Test.csv'\n"
      ]
     }
    ],
@@ -204,10 +207,36 @@
     "    \"Gradient Boosting\": GradientBoostingClassifier(),\n",
     "}\n",
     "\n",
+    "# 找到在验证集上表现最好的模型\n",
+    "best_model_name = None\n",
+    "best_accuracy = 0\n",
+    "best_model = None\n",
+    "\n",
     "for model_name, model in models.items():\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_val)\n",
-    "    print(f\"{model_name} Accuracy: {accuracy_score(y_val, y_pred)}\")\n"
+    "    accuracy = accuracy_score(y_val, y_pred)\n",
+    "    print(f\"{model_name} Accuracy: {accuracy}\")\n",
+    "    \n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_model_name = model_name\n",
+    "        best_model = model\n",
+    "\n",
+    "print(f\"Best model: {best_model_name} with accuracy: {best_accuracy}\")\n",
+    "\n",
+    "# 使用最好的模型预测测试集\n",
+    "best_model.fit(X_train, y_train)  # 重新训练模型\n",
+    "y_test_pred = best_model.predict(X_test)\n",
+    "\n",
+    "# 将预测的结果填充到 test_data 的 Class(Target) 列\n",
+    "test_data['Class(Target)'] = y_test_pred\n",
+    "\n",
+    "# 保存更新后的 test_data 到文件\n",
+    "test_data.to_csv('../data/Updated_Test.csv', index=False)\n",
+    "\n",
+    "print(\"Updated test data saved as 'Updated_Test.csv'\")\n",
+    "\n"
    ]
   }
  ],
