--- a/Semester 2/COMP7310 - Artificial intelligence of things/lab04/lab_4_filtering.ipynb
+++ b/Semester 2/COMP7310 - Artificial intelligence of things/lab04/lab_4_filtering.ipynb
@@ -649,7 +649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "comp7310",
    "language": "python",
    "name": "python3"
   },
@@ -663,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
